--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <p>
-Greetings, folks, and welcome to the new wissmiller.net. 
+Greetings, folks, and welcome to the new __wissmiller.net__. 
 This is an experiment to see if I can move wissmiller.net to GitHub Pages. 
 Currently wissmiller.net is hosted on a Raspberry Pi 4B in my house. 
 If I can get it to work "well enough" here, thinngs will be much easier 
