--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <p>
+<div markdown="1">
+   My text with **markdown** syntax
+# wissmiller.net
 Greetings, folks, and welcome to the new __wissmiller.net__. 
 This is an experiment to see if I can move wissmiller.net to GitHub Pages. 
 Currently wissmiller.net is hosted on a Raspberry Pi 4B in my house. 
 If I can get it to work "well enough" here, thinngs will be much easier 
 because I won't have to maintain a full blown Apache web server 24x7.
+</div>
 </p>
 <p>
 I invite you to take a tour, and let me know what you think. 
