--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,64 @@
+<!-- begin top.html -->
+<html>
+  <head>
+    <title>wissmiller.net</title>
+    <link rel="shortcut icon" href="sketchofme.ico">
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta content="Paul Wissmiller" name="author">
+    <link rel=stylesheet href="wissnet.css" type="text/css" media=screen>
+  </head>
+  <body>
+    <table width="100%" cellpadding="0" cellspacing="0">
+      <tbody>
+        <tr>
+          <td align="left">
+            <!--
+            <img style="align: right; margin: 10px 10px" alt="sketch of me" src="sketchofme.jpg">
+            -->
+          <a href="https://www.google.com/maps/place/Mikado,+MI+48745/@44.4311643,-83.39071,8z/data=!4m2!3m1!1s0x88274661777df855:0xdba9a5f6dc17aea">
+            <img style="align: right; margin: 10px 10px" alt="Wissmiller Road, Mikado, MI" src="images/wissmiller-road.jpg">
+          </a>
+          </td>
+          <td>
+            <table width="100%">
+              <tr>
+                <td align="center">
+                  <h1>wissmiller.net</h1>
+                </td>
+              </tr>
+              <tr>
+                <td align="center">
+                  <h3>Paul Wissmiller</h3>
+                </td>
+              </tr>
+            </table>
+          </td>
+          <td align="right">
+            <img style="align: right; margin: 10px 10px" alt="Old Glory" src="images/flag.png">
+          </td>
+          <td class="divider" style="width: 10px">
+          </td>
+        </tr>
+        <tr>
+          <td class="divider" style="height: 10px"></td>
+          <td class="divider" style="height: 10px"></td>
+          <td class="divider" style="height: 10px"></td>
+          <td class="divider" style="height: 10px"></td>
+        </tr>
+      </tbody>                                                 
+    </table>
+    <table width="100%" cellpadding="0" cellspacing="0">
+      <tbody>
+        <tr>
+          <td style="height: 100%; vertical-align: top">
+<!-- end top.html -->
 <p>
   email:
   <br><br>
   <span style="unicode-bidi:bidi-override; direction: rtl;">ten.rellimssiw@retsambew</span>
 </p>
 
+<!--#include virtual="bottom.html" -->
+  </body>
+</html>
+<!-- end bottom.html -->
