--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             -->
           <a href="https://www.google.com/maps/place/Mikado,+MI+48745/@44.4311643,-83.39071,8z/data=!4m2!3m1!1s0x88274661777df855:0xdba9a5f6dc17aea">
             <img style="align: right; margin: 10px 10px" alt="Wissmiller Road, Mikado, MI" src="images/wissmiller-road.jpg">
+            click for a map.
           </a>
           </td>
           <td>
