--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta content="Paul Wissmiller" name="author">
     <link rel=stylesheet href="wissnet.css" type="text/css" media=screen>
+    <br>
   </head>
   <body>
     <table width="100%" cellpadding="0" cellspacing="0">
@@ -17,6 +18,7 @@
             -->
           <a href="https://www.google.com/maps/place/Mikado,+MI+48745/@44.4311643,-83.39071,8z/data=!4m2!3m1!1s0x88274661777df855:0xdba9a5f6dc17aea">
             <img style="align: right; margin: 10px 10px" alt="Wissmiller Road, Mikado, MI" src="images/wissmiller-road.jpg">
+            Click here for map.
           </a>
           </td>
           <td>
@@ -62,3 +64,6 @@
   </body>
 </html>
 <!-- end bottom.html -->
+<!--
+vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
+-->
