--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!-- begin top.html -->
+<!--#include virtual="top.html" -->
 <html>
   <head>
     <title>wissmiller.net</title>
@@ -6,7 +6,6 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta content="Paul Wissmiller" name="author">
     <link rel=stylesheet href="wissnet.css" type="text/css" media=screen>
-    <br>
   </head>
   <body>
     <table width="100%" cellpadding="0" cellspacing="0">
@@ -18,7 +17,7 @@
             -->
           <a href="https://www.google.com/maps/place/Mikado,+MI+48745/@44.4311643,-83.39071,8z/data=!4m2!3m1!1s0x88274661777df855:0xdba9a5f6dc17aea">
             <img style="align: right; margin: 10px 10px" alt="Wissmiller Road, Mikado, MI" src="images/wissmiller-road.jpg">
-            Click here for map.
+            <br>&nbsp;&nbsp;Click for a map.
           </a>
           </td>
           <td>
@@ -55,9 +54,7 @@
           <td style="height: 100%; vertical-align: top">
 <!-- end top.html -->
 <p>
-  email:
-  <br><br>
-  <span style="unicode-bidi:bidi-override; direction: rtl;">ten.rellimssiw@retsambew</span>
+  <h2>email: webmaster@wissmiller.net<ten.rellimssiw@retsambew/h2>
 </p>
 
 <!--#include virtual="bottom.html" -->
