--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
 <!--#include virtual="top.html" -->
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
-  "http://www.w3.org/TR/html4/strict.dtd">
-<!-- begin top.html -->
 <html>
   <head>
     <title>wissmiller.net</title>
@@ -19,7 +16,8 @@
             <img style="align: right; margin: 10px 10px" alt="sketch of me" src="sketchofme.jpg">
             -->
           <a href="https://www.google.com/maps/place/Mikado,+MI+48745/@44.4311643,-83.39071,8z/data=!4m2!3m1!1s0x88274661777df855:0xdba9a5f6dc17aea">
-            <img style="align: right; margin: 10px 10px" alt="Wissmiller Road, Mikado, MI<br>Click for a map." src="images/wissmiller-road.jpg">
+            <img style="align: right; margin: 10px 10px" alt="Wissmiller Road, Mikado, MI" src="images/wissmiller-road.jpg">
+            <br>&nbsp;&nbsp;Click for a map.
           </a>
           </td>
           <td>
@@ -50,6 +48,7 @@
         </tr>
       </tbody>                                                 
     </table>
+    <br>
     <table width="100%" cellpadding="0" cellspacing="0">
       <tbody>
         <tr>
