--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!--#include virtual="top.html" -->
 <html>
   <head>
     <title>wissmiller.net</title>
@@ -12,9 +11,6 @@
       <tbody>
         <tr>
           <td align="left">
-            <!--
-            <img style="align: right; margin: 10px 10px" alt="sketch of me" src="sketchofme.jpg">
-            -->
           <a href="https://www.google.com/maps/place/Mikado,+MI+48745/@44.4311643,-83.39071,8z/data=!4m2!3m1!1s0x88274661777df855:0xdba9a5f6dc17aea">
             <img style="align: right; margin: 10px 10px" alt="Wissmiller Road, Mikado, MI" src="images/wissmiller-road.jpg">
             <br>&nbsp;&nbsp;Click for a map.
@@ -52,76 +48,36 @@
     <table width="100%" cellpadding="0" cellspacing="0">
       <tbody>
         <tr>
-          <td style="height: 100%; vertical-align: top">
-<!-- end top.html -->
-
-<!--#include virtual="toplinks.html" -->
-<!-- begin toplinks.html -->
-  <td style="width: 20%; vertical-align: top">              
-    <table width="100%" cellpadding="0" cellspacing="0">
-      <tbody>
-        <tr>
           <td>
-            <h2>Links</h2>
-            <a href="index.html">Welcome</a><br><br>
-            <!--
-            <a href="guestbook.html">Guest Book</a><br><br>
-            <a href="calendar.html">Calendar</a><br><br>
-            -->
-            <a href="genealogy.html">Genealogy</a><br><br>
-<!--            <a href="http://www.wissmiller.org/">Annual Wissmiller Reunion</a><br><br>-->
-            <a href="reunion.html">Wissmiller Reunion</a><br><br>
-            <a href="pictures.html">Pictures</a><br><br>
-            <a href="play">Music Player</a><br><br>
-            <a href="tabs">Tabs</a><br><br>
-            <a href="video.html">Video</a><br><br>
-            <a href="contact.html">Contact Me</a><br><br>
-<!--            <hr style="height: 1px; width: 100%">-->
+            <h2>Welcome!</h2>
+            <p>
+            Greetings, folks, and welcome to the new wissmiller.net. 
+            </p>
+            <p>
+            This is a first shot at moving my website, wissmiller.net, to Github Pages.
+            The website was hosted on a Raspberry Pi 4 web server in my house for many years, 
+            but we have now switched from Comcast to T-Mobile home internet, and the T-Mobile
+            gateway doesn't allow me to set up port forwarding, etc. to make the website work.
+            However, Github Pages supports free static websites, so this will be the new home
+            of wissmiller.net.
+            </p>
+            <p>
+            To get on the email list for family news, such as genealogy and the annual
+            Wissmiller reunion, please send me an email.
+            (See <a href="contact.html">Contact Me</a>.)
+            </p>
+            <p>
+              Links:<br>
+              <a href="https://www.wissmiller.org/">Wissmiller Reunion</a><br>
+              <a href="contact.html">Contact Me</a><br>
+            </p>
           </td>
         </tr>
       </tbody>
     </table>
-  </td>
-  <td style="vertical-align: top">
-<!-- end toplinks.html -->
-
-<script src="https://apis.google.com/js/platform.js" async defer></script>
-<table width="100%" cellpadding="0" cellspacing="30">
-  <tbody>
-	  <tr>
-	    <td>
-		    <h2>Welcome!</h2>
-        <p>
-          Greetings, folks, and welcome to the new wissmiller.net. 
-          This is an experiment to see if I can move wissmiller.net to GitHub Pages. 
-          Currently wissmiller.net is hosted on a Raspberry Pi 4B in my house. 
-          If I can get it to work "well enough" here, things will be much easier 
-          because I won't have to maintain a full blown Apache web server 24x7.
-        </p>
-        <p>
-        To get on the email list for family news, such as genealogy and the annual
-        Wissmiller reunion, please send me an email.
-        (See <a href="contact.html">Contact Me</a>.)
-		    </p>
-	    </td>
-	  </tr>
-  </tbody>
-</table>
-
-<!--#include virtual="bottomlinks.html" -->
-<!-- begin bottomlinks.html -->
-	   </td>
-	 </tr>
-  </tbody>
-</table>
-<!-- end bottomlinks.html -->
-
-<!--#include virtual="bottom.html" -->
-
   </body>
 </html>
 
-<!-- end bottom.html -->
 <!--
 vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
 -->
