--- a/index.html
+++ b/index.html
@@ -59,17 +59,15 @@
             but we have now switched from Comcast to T-Mobile home internet, and the T-Mobile
             gateway doesn't allow me to set up port forwarding, etc. to make the website work.
             However, Github Pages supports free static websites, so this will be the new home
-            of wissmiller.net.
+            of wissmiller.net. There's not much here yet.
             </p>
             <p>
             To get on the email list for family news, such as genealogy and the annual
-            Wissmiller reunion, please send me an email.
-            (See <a href="contact.html">Contact Me</a>.)
+            Wissmiller reunion, please send an email to webmaster@wissmiller.net.
             </p>
             <p>
               Links:<br>
               <a href="https://www.wissmiller.org/">Wissmiller Reunion</a><br>
-              <a href="contact.html">Contact Me</a><br>
             </p>
           </td>
         </tr>
