more improvements, genealogy page needs updating

--- a/genealogy.html
+++ b/genealogy.html
@@ -5,7 +5,7 @@
 <html>
   <head>
     <title>wissmiller.net</title>
-    <link rel="shortcut icon" href="sketchofme.ico">
+    <link rel="shortcut icon" href="images/sketchofme.ico">
 <!--
     <link rel="icon" href="favicon.ico">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
@@ -22,9 +22,9 @@
       <tbody>
         <tr>
           <td align="left">
-<!--            <img style="align: right; margin: 10px 10px" alt="sketch of me" src="sketchofme.jpg">-->
+<!--            <img style="align: right; margin: 10px 10px" alt="sketch of me" src="images/sketchofme.jpg">-->
             <a href="https://www.google.com/maps/place/Mikado,+MI+48745/@44.4311643,-83.39071,8z/data=!4m2!3m1!1s0x88274661777df855:0xdba9a5f6dc17aea">
-            <img style="align: right; margin: 10px 10px" alt="Wissmiller Road, Mikado, MI" src="wissmiller-road.jpg">
+            <img style="align: right; margin: 10px 10px" alt="Wissmiller Road, Mikado, MI" src="images/wissmiller-road.jpg">
             <br>&nbsp;&nbsp;(click for map)
           </a>
           </td>
@@ -43,7 +43,7 @@
             </table>
           </td>
           <td align="right">
-            <img style="align: right; margin: 10px 10px" alt="Old Glory" src="flag.png">
+            <img style="align: right; margin: 10px 10px" alt="Old Glory" src="images/flag.png">
           </td>
           <td class="divider" style="width: 10px">
           </td>
@@ -81,8 +81,9 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
             <a href="calendar.html">Calendar</a><br><br>
             -->
             <a href="genealogy.html">Genealogy</a><br><br>
-            <a href="http://www.wissmiller.org/">Annual Wissmiller Reunion</a><br><br>
-<!--            <a href="reunion.html">Wissmiller Reunion</a><br><br>-->
+<!--            This link is now embedded in reunion.html.-->
+            <a href="reunion.html">Wissmiller Reunion</a><br><br>
+            <a href="http://www.wissmiller.org/">Reunion page of George W.</a><br><br>
 <!--            <a href="pictures.html">Pictures</a><br><br>-->
 <!--            <a href="play">Music Player</a><br><br>-->
 <!--            <a href="tabs">Tabs</a><br><br>-->
@@ -107,7 +108,7 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
     <tr>
       <td>
         <div class="caption" style="float: right" align="center"> <img style="width: 800px; height: 500px; margin: 10px 10px" alt="My grandfather and my 4 uncles"
-          src="grandpa-and-uncles.jpg"><br>
+          src="images/grandpa-and-uncles.jpg"><br>
         This is my grandfather (center) and my 4 uncles.
         My father was away at college at the time.<br><br>
         </div>
@@ -210,7 +211,7 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
                               Powered by GitHub Pages
                             </a>
                             <p>
-This page modified: Sat Oct 29 16:36:20 2022
+This page modified: Sun Oct 30 11:38:01 2022
                             </p>
                           </td>
                         <tr>
