--- a/reunion.html
+++ b/reunion.html
@@ -116,40 +116,80 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
   <tbody>
 	  <tr>
 	    <td>
-		    <div class="caption" style="float: right; text-align: center">
-<figure>
-    <img style="height: 324px; margin: 10px 10px" alt="Aretha says Hi!" src="images/Aretha.gif"/>
-    <figcaption>Aretha says Hi!</figcaption>
-</figure>
+		    <h2>Wissmiller Reunion 2022</h2>
+        <p>
+        It's that time again! We plan to be back at the First Presbyterian Church in Gibson City this year
+        on June 26. Also, we'll return to serving the food buffet style. If you can, bring your favorite dish for 
+        the buffet. (It is possible this could change if the pandemic worsens.)
+		    </p>
+        <p>
+        The reunion is a great opportunity to catch up with family members, to meet others for the first time, 
+        and as always, to enjoy some great food and fun together.
+        Please come, and bring other family members and friends, too!
+		    </p>
+        <p>
+        Date: June 26, 2022<br>
+        Time: 12:30 PM
+        Location: First Presbyterian Church, 401 N Church St, Gibson City, IL 60936
+        <a href="https://goo.gl/maps/bCy3fQykeJrBJKoW8">Click here for map</a>
+        
+		    </p>
+		    <h2>2021 Reunion Recap</h2>
+        <p>
+        We got the reunion back on track last year at the library in Gibson City, after missing 2020 
+        due to the pandemic. It was a smaller crowd, but we had big fun.
+		    </p>
+        <p>
+        There were a good number of regulars in attendance. Also, Brittany and Marcus came from the Indianapolis area
+        along with their two delightful youngsters, Czarina and Krys.
+        Brittany has an interest in genealogy, and she and I have already done some collaboration.
+		    </p>
+        <p>
+        Aaron Wissmiller brought a copy of the 1935 Fortune Magazine pictorial about the George Wissmiller farm
+        in Cooksville. My Uncle Evan, who grew up on that farm, was in attendance.
+        He narrated the pictures in great detail, even the names of the horses and the dog. He identified a boy
+        sitting on a wagon in one picture as Uncle Orval. At 97, he still remembers everything!
+		    </p>
+        <p>
+        Julie Wissmiller took these great pictures. Thanks, Julie!
+        <br>
+        <br>
+<!--		    <div class="caption" style="float: right; text-align: center">-->
+		    <div class="caption" style="float: left; text-align: center">
+
+<p style="float: left; font-size: 9pt; text-align: center; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
+  <img src="images/reunion2021/GroupPic.jpg" style="width: 100%">
+  <font size="+1">Everyone except Julie, who took all the pictures</font></p>
+
+<p style="float: left; font-size: 9pt; text-align: center; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
+  <img src="images/reunion2021/BrittanySherry.jpg" style="width: 100%">
+  <font size="+1">Brittany and Sherry</font></p>
+
+<p style="float: left; font-size: 9pt; text-align: center; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
+  <img src="images/reunion2021/EvanRoger.jpg" style="width: 100%">
+  <font size="+1">Evan and Roger</font></p>
+
+<p style="float: left; font-size: 9pt; text-align: center; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
+  <img src="images/reunion2021/Czarina.jpg" style="width: 100%">
+  <font size="+1">Czarina</font></p>
+
+<p style="float: left; font-size: 9pt; text-align: center; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
+  <img src="images/reunion2021/Krys.jpg" style="width: 100%">
+  <font size="+1">Krys</font></p>
+
+<p style="float: left; font-size: 9pt; text-align: center; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
+  <img src="images/reunion2021/MarcusBrittany.jpg" style="width: 100%">
+  <font size="+1">Marcus and Brittany</font></p>
+
+<p style="float: left; font-size: 9pt; text-align: center; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
+  <img src="images/reunion2021/Discussion.jpg" style="width: 100%">
+  <font size="+1">Group Discussion</font></p>
+
+<p style="float: left; font-size: 9pt; text-align: center; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
+  <img src="images/reunion2021/JeannettePaulKarilynMarcus.jpg" style="width: 100%">
+  <font size="+1">Jeannete, Paul, Karilyn and Marcus</font></p>
+
 		    </div>
-		    <h2>Welcome!</h2>
-        <p>
-        Greetings, folks, and welcome to the new <a href="https://wissmiller.net">wissmiller.net</a>.
-        We switched from Comcast to T-Mobile for home internet service,
-        and the new gateway won't let me host the website in my house like before.
-        Enter <a href="https://pages.github.com">GitHub Pages</a>!
-		    </p>
-        <p>
-        <a href="https://github.com">GitHub</a> is web service widely used by open source developers to 
-        maintain and share their many source code repositories.
-        GitHub Pages offers free hosting of websites stored on GitHub, so it's web hosting with automatic versioning and source
-        code control built in. Anyway, this is exciting for some and boring to others, so I'll move on.
-		    </p>
-        <p>
-        GitHub Pages does have some restrictions, though. It doesn't allow private pages with password protection,
-        so I won't be able to include genealogy or other sensitive data.
-        Other restrictions will require some internal reworking of the web site.
-        On the positive side, I no longer need to maintain my own web server.
-        (That was getting to be a pain.)
-		    </p>
-        <p>
-        I invite you to take a tour and send me your thoughts and comments.
-        To join the email list for family news, such as genealogy and the annual Wissmiller reunion,
-        please send me an email. (See <a href="contact.html">Contact Me</a>.)
-		    </p>
-        <p>
-        As always, this website is a work in progress.
-		    </p>
 	    </td>
 	  </tr>
   </tbody>
@@ -191,7 +231,7 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
                               Powered by GitHub Pages
                             </a>
                             <p>
-This page modified: Sun Oct 30 11:38:09 2022
+This page modified: Sun Oct 30 11:39:54 2022
                             </p>
                           </td>
                         <tr>
