--- a/reunion.html
+++ b/reunion.html
@@ -116,79 +116,77 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
   <tbody>
 	  <tr>
 	    <td>
-		    <h2>Wissmiller Reunion 2022</h2>
+		    <h2>2022 Reunion Recap</h2>
         <p>
-        It's that time again! We plan to be back at the First Presbyterian Church in Gibson City this year
-        on June 26. Also, we'll return to serving the food buffet style. If you can, bring your favorite dish for 
-        the buffet. (It is possible this could change if the pandemic worsens.)
+<!--        We got the reunion back on track last year at the library in Gibson City, after missing 2020 -->
+<!--        due to the pandemic. It was a smaller crowd, but we had big fun.-->
+<!--		    </p>-->
+<!--        <p>-->
+<!--        There were a good number of regulars in attendance. Also, Brittany and Marcus came from the Indianapolis area-->
+<!--        along with their two delightful youngsters, Czarina and Krys.-->
+<!--        Brittany has an interest in genealogy, and she and I have already done some collaboration.-->
+<!--		    </p>-->
+<!--        <p>-->
+<!--        Aaron Wissmiller brought a copy of the 1935 Fortune Magazine pictorial about the George Wissmiller farm-->
+<!--        in Cooksville. My Uncle Evan, who grew up on that farm, was in attendance.-->
+<!--        He narrated the pictures in great detail, even the names of the horses and the dog. He identified a boy-->
+<!--        sitting on a wagon in one picture as Uncle Orval. At 97, he still remembers everything!-->
+<!--		    </p>-->
+<!--        <p>-->
+<!--        Julie Wissmiller took these great pictures. Thanks, Julie!-->
+<!--        <br>-->
+<!--        <br>-->
+<!--		    <div class="caption" style="float: left; text-align: center">-->
+<!---->
+<!--<p style="float: left; font-size: 9pt; text-align: center; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">-->
+<!--  <img src="images/reunion2021/GroupPic.jpg" style="width: 100%">-->
+<!--  <font size="+1">Everyone except Julie, who took all the pictures</font></p>-->
+<!---->
+<!--<p style="float: left; font-size: 9pt; text-align: center; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">-->
+<!--  <img src="images/reunion2021/BrittanySherry.jpg" style="width: 100%">-->
+<!--  <font size="+1">Brittany and Sherry</font></p>-->
+<!---->
+<!--<p style="float: left; font-size: 9pt; text-align: center; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">-->
+<!--  <img src="images/reunion2021/EvanRoger.jpg" style="width: 100%">-->
+<!--  <font size="+1">Evan and Roger</font></p>-->
+<!---->
+<!--<p style="float: left; font-size: 9pt; text-align: center; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">-->
+<!--  <img src="images/reunion2021/Czarina.jpg" style="width: 100%">-->
+<!--  <font size="+1">Czarina</font></p>-->
+<!---->
+<!--<p style="float: left; font-size: 9pt; text-align: center; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">-->
+<!--  <img src="images/reunion2021/Krys.jpg" style="width: 100%">-->
+<!--  <font size="+1">Krys</font></p>-->
+<!---->
+<!--<p style="float: left; font-size: 9pt; text-align: center; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">-->
+<!--  <img src="images/reunion2021/MarcusBrittany.jpg" style="width: 100%">-->
+<!--  <font size="+1">Marcus and Brittany</font></p>-->
+<!---->
+<!--<p style="float: left; font-size: 9pt; text-align: center; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">-->
+<!--  <img src="images/reunion2021/Discussion.jpg" style="width: 100%">-->
+<!--  <font size="+1">Group Discussion</font></p>-->
+<!---->
+<!--<p style="float: left; font-size: 9pt; text-align: center; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">-->
+<!--  <img src="images/reunion2021/JeannettePaulKarilynMarcus.jpg" style="width: 100%">-->
+<!--  <font size="+1">Jeannete, Paul, Karilyn and Marcus</font></p>-->
+
+		    <h2>Wissmiller Reunion 2023</h2>
+        <p>
+<!--        It's that time again! We plan to be back at the First Presbyterian Church in Gibson City this year-->
+<!--        on June 26. Also, we'll return to serving the food buffet style. If you can, bring your favorite dish for -->
+<!--        the buffet. (It is possible this could change if the pandemic worsens.)-->
+<!--		    </p>-->
+<!--        <p>-->
+<!--        The reunion is a great opportunity to catch up with family members, to meet others for the first time, -->
+<!--        and as always, to enjoy some great food and fun together.-->
+<!--        Please come, and bring other family members and friends, too!-->
+<!--		    </p>-->
+<!--        <p>-->
+<!--        Date: June 26, 2022<br>-->
+<!--        Time: 12:30 PM-->
+<!--        Location: First Presbyterian Church, 401 N Church St, Gibson City, IL 60936-->
+<!--        <a href="https://goo.gl/maps/bCy3fQykeJrBJKoW8">Click here for map</a>-->
 		    </p>
-        <p>
-        The reunion is a great opportunity to catch up with family members, to meet others for the first time, 
-        and as always, to enjoy some great food and fun together.
-        Please come, and bring other family members and friends, too!
-		    </p>
-        <p>
-        Date: June 26, 2022<br>
-        Time: 12:30 PM
-        Location: First Presbyterian Church, 401 N Church St, Gibson City, IL 60936
-        <a href="https://goo.gl/maps/bCy3fQykeJrBJKoW8">Click here for map</a>
-        
-		    </p>
-		    <h2>2021 Reunion Recap</h2>
-        <p>
-        We got the reunion back on track last year at the library in Gibson City, after missing 2020 
-        due to the pandemic. It was a smaller crowd, but we had big fun.
-		    </p>
-        <p>
-        There were a good number of regulars in attendance. Also, Brittany and Marcus came from the Indianapolis area
-        along with their two delightful youngsters, Czarina and Krys.
-        Brittany has an interest in genealogy, and she and I have already done some collaboration.
-		    </p>
-        <p>
-        Aaron Wissmiller brought a copy of the 1935 Fortune Magazine pictorial about the George Wissmiller farm
-        in Cooksville. My Uncle Evan, who grew up on that farm, was in attendance.
-        He narrated the pictures in great detail, even the names of the horses and the dog. He identified a boy
-        sitting on a wagon in one picture as Uncle Orval. At 97, he still remembers everything!
-		    </p>
-        <p>
-        Julie Wissmiller took these great pictures. Thanks, Julie!
-        <br>
-        <br>
-<!--		    <div class="caption" style="float: right; text-align: center">-->
-		    <div class="caption" style="float: left; text-align: center">
-
-<p style="float: left; font-size: 9pt; text-align: center; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
-  <img src="images/reunion2021/GroupPic.jpg" style="width: 100%">
-  <font size="+1">Everyone except Julie, who took all the pictures</font></p>
-
-<p style="float: left; font-size: 9pt; text-align: center; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
-  <img src="images/reunion2021/BrittanySherry.jpg" style="width: 100%">
-  <font size="+1">Brittany and Sherry</font></p>
-
-<p style="float: left; font-size: 9pt; text-align: center; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
-  <img src="images/reunion2021/EvanRoger.jpg" style="width: 100%">
-  <font size="+1">Evan and Roger</font></p>
-
-<p style="float: left; font-size: 9pt; text-align: center; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
-  <img src="images/reunion2021/Czarina.jpg" style="width: 100%">
-  <font size="+1">Czarina</font></p>
-
-<p style="float: left; font-size: 9pt; text-align: center; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
-  <img src="images/reunion2021/Krys.jpg" style="width: 100%">
-  <font size="+1">Krys</font></p>
-
-<p style="float: left; font-size: 9pt; text-align: center; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
-  <img src="images/reunion2021/MarcusBrittany.jpg" style="width: 100%">
-  <font size="+1">Marcus and Brittany</font></p>
-
-<p style="float: left; font-size: 9pt; text-align: center; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
-  <img src="images/reunion2021/Discussion.jpg" style="width: 100%">
-  <font size="+1">Group Discussion</font></p>
-
-<p style="float: left; font-size: 9pt; text-align: center; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
-  <img src="images/reunion2021/JeannettePaulKarilynMarcus.jpg" style="width: 100%">
-  <font size="+1">Jeannete, Paul, Karilyn and Marcus</font></p>
-
 		    </div>
 	    </td>
 	  </tr>
@@ -231,7 +229,7 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
                               Powered by GitHub Pages
                             </a>
                             <p>
-This page modified: Sun Oct 30 11:39:54 2022
+This page modified: Sun Oct 30 15:26:48 2022
                             </p>
                           </td>
                         <tr>
