more minor changes

--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
         <a href="https://github.com">GitHub</a> is web service widely used by open source developers to 
         maintain and share their many source code repositories.
         GitHub Pages offers free hosting of websites stored on GitHub, so it's web hosting with automatic versioning and source
-        code control built in. Anyway, this is exciting for some and boring to others, so I'll move on.
+        code control built in. Anyway, this stuff is exciting to some and boring to others, so I'll move on.
 		    </p>
         <p>
-        GitHub Pages does have some restrictions, though. It doesn't allow private pages with password protection,
+        GitHub Pages has some restrictions. It doesn't allow private pages with password protection,
         so I won't be able to include genealogy or other sensitive data.
         Other restrictions will require some internal reworking of the web site.
         On the positive side, I no longer need to maintain my own web server.
@@ -187,11 +187,11 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
                         <tr>
                           <td style="align: left;">
                             <a href="http://pages.github.com/">
-                              <img style="border: none; " alt="Powered by GitHub Pages" src="github.png">
+                              <img style="border: none; " alt="Powered by GitHub Pages" src="images/github.png">
                               Powered by GitHub Pages
                             </a>
                             <p>
-This page modified: Sun Oct 30 11:38:09 2022
+This page modified: Fri Nov  4 13:43:59 2022
                             </p>
                           </td>
                         <tr>
