--- a/contact.html
+++ b/contact.html
@@ -155,7 +155,7 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
                         <tr>
                           <td style="align: left;">
                             <a href="http://pages.github.com/">
-                              <img style="border: none; " alt="Powered by GitHub Pages" src="github.png">
+                              <img style="border: none; " alt="Powered by GitHub Pages" src="images/github.png">
                               Powered by GitHub Pages
                             </a>
                             <p>
