--- a/contact.html
+++ b/contact.html
@@ -76,18 +76,12 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
           <td>
             <h2>Links</h2>
             <a href="index.html">Welcome</a><br><br>
-            <!--
-            <a href="guestbook.html">Guest Book</a><br><br>
-            <a href="calendar.html">Calendar</a><br><br>
-            -->
             <a href="genealogy.html">Genealogy</a><br><br>
 <!--            This link is now embedded in reunion.html.-->
             <a href="reunion.html">Wissmiller Reunion</a><br><br>
-            <a href="http://www.wissmiller.org/">Reunion page of George W.</a><br><br>
-<!--            <a href="pictures.html">Pictures</a><br><br>-->
-<!--            <a href="play">Music Player</a><br><br>-->
-<!--            <a href="tabs">Tabs</a><br><br>-->
-<!--            <a href="video.html">Video</a><br><br>-->
+            <a href="http://www.wissmiller.org/" target="_blank">Reunion page by George W.</a><br><br>
+<!--            <a href="https://drive.google.com/drive/folders/1hKjhsO_Ac8bMp1otI6s9zfQeDm9zyKpc?usp=sharing">-->
+            <a href="pictures.html">Pictures by Lee Wissmiller</a><br><br>
             <a href="contact.html">Contact Me</a><br><br>
 <!--            <hr style="height: 1px; width: 100%">-->
           </td>
