--- a/index.html
+++ b/index.html
@@ -76,18 +76,12 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
           <td>
             <h2>Links</h2>
             <a href="index.html">Welcome</a><br><br>
-            <!--
-            <a href="guestbook.html">Guest Book</a><br><br>
-            <a href="calendar.html">Calendar</a><br><br>
-            -->
             <a href="genealogy.html">Genealogy</a><br><br>
 <!--            This link is now embedded in reunion.html.-->
             <a href="reunion.html">Wissmiller Reunion</a><br><br>
-            <a href="http://www.wissmiller.org/">Reunion page of George W.</a><br><br>
-<!--            <a href="pictures.html">Pictures</a><br><br>-->
-<!--            <a href="play">Music Player</a><br><br>-->
-<!--            <a href="tabs">Tabs</a><br><br>-->
-<!--            <a href="video.html">Video</a><br><br>-->
+            <a href="http://www.wissmiller.org/" target="_blank">Reunion page by George W.</a><br><br>
+<!--            <a href="https://drive.google.com/drive/folders/1hKjhsO_Ac8bMp1otI6s9zfQeDm9zyKpc?usp=sharing">-->
+            <a href="pictures.html">Pictures by Lee Wissmiller</a><br><br>
             <a href="contact.html">Contact Me</a><br><br>
 <!--            <hr style="height: 1px; width: 100%">-->
           </td>
@@ -130,22 +124,24 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
         Enter <a href="https://pages.github.com">GitHub Pages</a>!
 		    </p>
         <p>
-        <a href="https://github.com">GitHub</a> is web service widely used by open source developers to 
-        maintain and share their many source code repositories.
-        GitHub Pages offers free hosting of websites stored on GitHub, so it's web hosting with automatic versioning and source
-        code control built in. Anyway, this stuff is exciting to some and boring to others, so I'll move on.
+        <a href="https://github.com">GitHub</a>
+        is a web service widely used by open source developers
+        to maintain and share their many source code repositories.
+        GitHub Pages offers free hosting of websites stored on GitHub,
+        so it's web hosting with automatic versioning and source control built in.
+        Anyway, this stuff is exciting to some and boring to others, so I'll move on.
 		    </p>
         <p>
-        GitHub Pages has some restrictions. It doesn't allow private pages with password protection,
+        GitHub Pages does have some have restrictions.
+        It doesn't allow private pages with password protection,
         so I won't be able to include genealogy or other sensitive data.
-        Other restrictions will require some internal reworking of the web site.
-        On the positive side, I no longer need to maintain my own web server.
-        (That was getting to be a pain.)
+        Other restrictions require some internal reworking of the website,
+        but that's way easier than constantly maintaining my own web server.
 		    </p>
         <p>
         I invite you to take a tour and send me your thoughts and comments.
         To join the email list for family news, such as genealogy and the annual Wissmiller reunion,
-        please send me an email. (See <a href="contact.html">Contact Me</a>.)
+        please <a href="contact.html">send me an email</a>.
 		    </p>
         <p>
         As always, this website is a work in progress.
@@ -191,7 +187,7 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
                               Powered by GitHub Pages
                             </a>
                             <p>
-This page modified: Fri Nov  4 13:43:59 2022
+This page modified: Wed Nov  9 11:31:00 2022
                             </p>
                           </td>
                         <tr>
