--- a/reunion.html
+++ b/reunion.html
@@ -76,18 +76,12 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
           <td>
             <h2>Links</h2>
             <a href="index.html">Welcome</a><br><br>
-            <!--
-            <a href="guestbook.html">Guest Book</a><br><br>
-            <a href="calendar.html">Calendar</a><br><br>
-            -->
             <a href="genealogy.html">Genealogy</a><br><br>
 <!--            This link is now embedded in reunion.html.-->
             <a href="reunion.html">Wissmiller Reunion</a><br><br>
-            <a href="http://www.wissmiller.org/">Reunion page of George W.</a><br><br>
-<!--            <a href="pictures.html">Pictures</a><br><br>-->
-<!--            <a href="play">Music Player</a><br><br>-->
-<!--            <a href="tabs">Tabs</a><br><br>-->
-<!--            <a href="video.html">Video</a><br><br>-->
+            <a href="http://www.wissmiller.org/" target="_blank">Reunion page by George W.</a><br><br>
+<!--            <a href="https://drive.google.com/drive/folders/1hKjhsO_Ac8bMp1otI6s9zfQeDm9zyKpc?usp=sharing">-->
+            <a href="pictures.html">Pictures by Lee Wissmiller</a><br><br>
             <a href="contact.html">Contact Me</a><br><br>
 <!--            <hr style="height: 1px; width: 100%">-->
           </td>
@@ -116,76 +110,108 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
   <tbody>
 	  <tr>
 	    <td>
+		    <div class="caption" style="float: right; text-align: center">
+          <figure>
+            <img style="height: 648px; margin: 10px 10px" alt="2022 Group Picture" src="images/2022-reunion-group.jpg"/>
+<!--            <figcaption>caption for picture</figcaption>-->
+          </figure>
+		    </div>
 		    <h2>2022 Reunion Recap</h2>
         <p>
-<!--        We got the reunion back on track last year at the library in Gibson City, after missing 2020 -->
-<!--        due to the pandemic. It was a smaller crowd, but we had big fun.-->
-<!--		    </p>-->
-<!--        <p>-->
-<!--        There were a good number of regulars in attendance. Also, Brittany and Marcus came from the Indianapolis area-->
-<!--        along with their two delightful youngsters, Czarina and Krys.-->
-<!--        Brittany has an interest in genealogy, and she and I have already done some collaboration.-->
-<!--		    </p>-->
-<!--        <p>-->
-<!--        Aaron Wissmiller brought a copy of the 1935 Fortune Magazine pictorial about the George Wissmiller farm-->
-<!--        in Cooksville. My Uncle Evan, who grew up on that farm, was in attendance.-->
-<!--        He narrated the pictures in great detail, even the names of the horses and the dog. He identified a boy-->
-<!--        sitting on a wagon in one picture as Uncle Orval. At 97, he still remembers everything!-->
-<!--		    </p>-->
-<!--        <p>-->
-<!--        Julie Wissmiller took these great pictures. Thanks, Julie!-->
-<!--        <br>-->
-<!--        <br>-->
-<!--		    <div class="caption" style="float: left; text-align: center">-->
-<!---->
-<!--<p style="float: left; font-size: 9pt; text-align: center; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">-->
-<!--  <img src="images/reunion2021/GroupPic.jpg" style="width: 100%">-->
-<!--  <font size="+1">Everyone except Julie, who took all the pictures</font></p>-->
-<!---->
-<!--<p style="float: left; font-size: 9pt; text-align: center; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">-->
-<!--  <img src="images/reunion2021/BrittanySherry.jpg" style="width: 100%">-->
-<!--  <font size="+1">Brittany and Sherry</font></p>-->
-<!---->
-<!--<p style="float: left; font-size: 9pt; text-align: center; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">-->
-<!--  <img src="images/reunion2021/EvanRoger.jpg" style="width: 100%">-->
-<!--  <font size="+1">Evan and Roger</font></p>-->
-<!---->
-<!--<p style="float: left; font-size: 9pt; text-align: center; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">-->
-<!--  <img src="images/reunion2021/Czarina.jpg" style="width: 100%">-->
-<!--  <font size="+1">Czarina</font></p>-->
-<!---->
-<!--<p style="float: left; font-size: 9pt; text-align: center; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">-->
-<!--  <img src="images/reunion2021/Krys.jpg" style="width: 100%">-->
-<!--  <font size="+1">Krys</font></p>-->
-<!---->
-<!--<p style="float: left; font-size: 9pt; text-align: center; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">-->
-<!--  <img src="images/reunion2021/MarcusBrittany.jpg" style="width: 100%">-->
-<!--  <font size="+1">Marcus and Brittany</font></p>-->
-<!---->
-<!--<p style="float: left; font-size: 9pt; text-align: center; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">-->
-<!--  <img src="images/reunion2021/Discussion.jpg" style="width: 100%">-->
-<!--  <font size="+1">Group Discussion</font></p>-->
-<!---->
-<!--<p style="float: left; font-size: 9pt; text-align: center; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">-->
-<!--  <img src="images/reunion2021/JeannettePaulKarilynMarcus.jpg" style="width: 100%">-->
-<!--  <font size="+1">Jeannete, Paul, Karilyn and Marcus</font></p>-->
+          We gathered at the First Presbyterian Church in Gibson City on June 26th for the 99th annual Wissmiller Reunion.
+          The 18 attendees enjoyed conversation and comradery, along with great home style food.
+          We also enjoyed sharing books and pictures about our shared heritage in central Illinois.
+          A few of the younger folks, namely Czarina Green and Sara Kenzie performed some astounding feats of gymnastics.
+        </p>
+        <p>
+          Following that, President Sara Kenzie called the “business meeting” to order. (It's less serious than it sounds.)
+          Here’s a synopsis of the proceedings, transcribed from Jeannette’s notes after the reunion.
+          <ol>
+            <li>Secretary Jeannette Hensley read the minutes from last year.</li>
+          </li>
+            <li>Families identified themselves and gave family news.</li>
+          </ol>
 
+The oldest attendee was Evan Wissmiller at 98 years.
+The youngest was Walter Paul Kenzie, at 6 1/2 months.
+The folks who came the farthest to the reunion were Karilyn and Julie, from Minneapolis, MN.
+</p>
+<p>
+Marriages:
+Aaron Wissmiller to Elaine Carter, June 10, 2022
+</p>
+<p>
+Births:<br>
+Walter Paul Kenzie, Dec. 6, 2021<br>
+Ella Josephine, Dec. 18, 2021 (If you know her last name, please let me know, 
+<span style="unicode-bidi:bidi-override; direction: rtl;">ten.rellimssiw@retsambew</span>
+)
+</p>
+<p>
+Deaths:
+Barbara Foulk, Nov. 13, 2021
+Janet Barret, Dec 6, 2021
+Dick Wangrow, Dec. 31, 2021
+John Wissmiller, Jan. 13, 2022
+Roger Wissmiller, Feb. 16, 2022
+</p>
+<p>
+Old Business:
+Aaron suggested bringing kids games to the reunion next year. We all agreed.
+</p>
+<p>
+New Business:
+Paul suggested that officers must be present at the reunion to be elected or re-elected.
+This was a rule in the past, and it served to avoid repeat "no show" officers. We agreed on that rule.<br>
+For the reunion reminder postcards, Paul suggested that we send cards only to those who do not have email. We also agreed on this point. If you know anyone interested in the reunion but without an email address, please let me know (paulwiss@gmail.com).
+</p>
+<p>
+Paul gave the Treasurer’s Report:
+Balance forward
+$65.00
+Stamps
+-$16.00
+Postcards
+-$14.00
+Donations collected
+$185.00
+Donated to church
+-$100.00
+Final balance
+$120.00
+</p>
+<p>
+We voted and elected officers for next year:
+President: Aaron Wissmiller
+Vice President: Paul Wissmiller
+Treasurer: Sara Kenzie
+Secretarty: Jeanette
+</p>
+<p>
+We agreed on the time and place for next year’s reunion (Our 100th Annual Reunion!)
+First Presbyterian Church. in Gibson City
+June 25, 2023, 12:30 PM
+</p>
+<p>
+The meeting was adjourned.
+		    </p>
 		    <h2>Wissmiller Reunion 2023</h2>
         <p>
-<!--        It's that time again! We plan to be back at the First Presbyterian Church in Gibson City this year-->
-<!--        on June 26. Also, we'll return to serving the food buffet style. If you can, bring your favorite dish for -->
-<!--        the buffet. (It is possible this could change if the pandemic worsens.)-->
-<!--		    </p>-->
+        We plan to meet again at the First Presbyterian Church in Gibson City at 12:30 pm on Sunday, June 25, 2023.
+        Next year will be the 100th annual reunion! We're looking for ways to make our centennial reunion
+        a special one. If you have ideas for that, please <a href="https://www.wissmiller.net/contact.html">pass them along</a>.
+        Thanks!
+		    </p>
 <!--        <p>-->
 <!--        The reunion is a great opportunity to catch up with family members, to meet others for the first time, -->
 <!--        and as always, to enjoy some great food and fun together.-->
 <!--        Please come, and bring other family members and friends, too!-->
 <!--		    </p>-->
-<!--        <p>-->
-<!--        Date: June 26, 2022<br>-->
-<!--        Time: 12:30 PM-->
-<!--        Location: First Presbyterian Church, 401 N Church St, Gibson City, IL 60936-->
-<!--        <a href="https://goo.gl/maps/bCy3fQykeJrBJKoW8">Click here for map</a>-->
+        <p>
+        Date: June 25, 2023<br>
+        Time: 12:30 PM
+        Location: First Presbyterian Church, 401 N Church St, Gibson City, IL 60936
+        <a href="https://goo.gl/maps/bCy3fQykeJrBJKoW8">Click here for map</a>
 		    </p>
 		    </div>
 	    </td>
@@ -229,7 +255,7 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
                               Powered by GitHub Pages
                             </a>
                             <p>
-This page modified: Sun Oct 30 15:26:48 2022
+This page modified: Tue Nov  8 19:21:54 2022
                             </p>
                           </td>
                         <tr>
