more minor stuff

--- a/reunion.html
+++ b/reunion.html
@@ -121,21 +121,29 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
           We gathered at the First Presbyterian Church in Gibson City on June 26th for the 99th annual Wissmiller Reunion.
           The 18 attendees enjoyed conversation and comradery, along with great home style food.
           We also enjoyed sharing books and pictures about our shared heritage in central Illinois.
-          A few of the younger folks, namely Czarina Green and Sara Kenzie performed some astounding feats of gymnastics.
+          Two of the younger folks, namely Czarina Green and Sara Kenzie performed some astounding feats of gymnastics.
         </p>
         <p>
           Following that, President Sara Kenzie called the “business meeting” to order. (It's less serious than it sounds.)
+        </p>
+        <p>
           Here’s a synopsis of the proceedings, transcribed from Jeannette’s notes after the reunion.
-          <ol>
-            <li>Secretary Jeannette Hensley read the minutes from last year.</li>
-          </li>
-            <li>Families identified themselves and gave family news.</li>
-          </ol>
-
-The oldest attendee was Evan Wissmiller at 98 years.
-The youngest was Walter Paul Kenzie, at 6 1/2 months.
-The folks who came the farthest to the reunion were Karilyn and Julie, from Minneapolis, MN.
-</p>
+        </p>
+        <p>
+          Secretary Jeannette Hensley read the minutes from last year.
+        </p>
+        <p>
+          Families identified themselves and gave family news.
+        </p>
+        <p>
+          The oldest attendee was Evan Wissmiller at 98 years.
+        </p>
+        <p>
+          The youngest was Walter Paul Kenzie, at 6 1/2 months.
+        </p>
+        <p>
+          The folks who came the farthest to the reunion were Karilyn and Julie, from Minneapolis, MN.
+        </p>
 <p>
 Marriages:
 Aaron Wissmiller to Elaine Carter, June 10, 2022
@@ -157,13 +165,16 @@ Roger Wissmiller, Feb. 16, 2022
 </p>
 <p>
 Old Business:
-Aaron suggested bringing kids games to the reunion next year. We all agreed.
+Aaron suggested bringing kid and adult games to the reunion next year. We all agreed.
+There is a shuffleboard court outlined on the floor tiles in our room at the church.
 </p>
 <p>
 New Business:
 Paul suggested that officers must be present at the reunion to be elected or re-elected.
-This was a rule in the past, and it served to avoid repeat "no show" officers. We agreed on that rule.<br>
-For the reunion reminder postcards, Paul suggested that we send cards only to those who do not have email. We also agreed on this point. If you know anyone interested in the reunion but without an email address, please let me know (paulwiss@gmail.com).
+This was a rule in the past, and it served to avoid "no show" officers. We agreed on it.<br>
+For the reunion reminder postcards, Paul suggested that we send cards only to those who do not have email.
+We also agreed on this point. If you know anyone interested in the reunion but without an email address,
+please <a href="contact.html">let me know</a>.
 </p>
 <p>
 Paul gave the Treasurer’s Report:
@@ -182,10 +193,12 @@ $120.00
 </p>
 <p>
 We voted and elected officers for next year:
-President: Aaron Wissmiller
-Vice President: Paul Wissmiller
-Treasurer: Sara Kenzie
-Secretarty: Jeanette
+<ul>
+  <li>President: Aaron Wissmiller</li>
+  <li>Vice President: Paul Wissmiller</li>
+  <li>Treasurer: Sara Kenzie</li>
+  <li>Secretarty: Jeanette</li>
+</ul>
 </p>
 <p>
 We agreed on the time and place for next year’s reunion (Our 100th Annual Reunion!)
@@ -199,7 +212,7 @@ The meeting was adjourned.
         <p>
         We plan to meet again at the First Presbyterian Church in Gibson City at 12:30 pm on Sunday, June 25, 2023.
         Next year will be the 100th annual reunion! We're looking for ways to make our centennial reunion
-        a special one. If you have ideas for that, please <a href="https://www.wissmiller.net/contact.html">pass them along</a>.
+        a special one. If you have ideas for that, please <a href="contact.html">pass them along</a>.
         Thanks!
 		    </p>
 <!--        <p>-->
@@ -255,7 +268,7 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
                               Powered by GitHub Pages
                             </a>
                             <p>
-This page modified: Tue Nov  8 19:21:54 2022
+This page modified: Thu Nov 10 16:57:28 2022
                             </p>
                           </td>
                         <tr>
