--- a/genealogy.html
+++ b/genealogy.html
@@ -150,14 +150,14 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
         <p>
         Making genealogy data available for others to view is tricky due to privacy concerns.
         I’ve been storing the data on <a href="https://www.ancestry.com/">Ancestry</a> and on 
-        <a href="/https://www.familysearch.org/en/"> FamilySearch</a>.
+        <a href="https://www.familysearch.org/en/"> FamilySearch</a>.
         <a href="https://www.ancestry.com/">Ancestry</a> and the other main genealogy websites 
         resolve the privacy issue by hiding personal data for all living persons.
         That’s great for privacy but terrible if you want to see your living relatives.
         </p>
         <p>
-        <a href="https://www.ancestry.com/">Ancestry</a> allows full access to the person 
-        who contributed the data (me), but hides personal information about living persons from others.
+        Ancestry allows full access to the person who contributed the data (me),
+        but hides personal information about living persons from others.
         I may be able to share data with people who are well known to me and have a serious
         interest in our family's genealogy. If that's you, please <a href="contact.html">Contact Me</a>.
         </p>
@@ -205,7 +205,7 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
                               Powered by GitHub Pages
                             </a>
                             <p>
-This page modified: Tue Nov  8 17:49:24 2022
+This page modified: Fri Nov 11 10:21:13 2022
                             </p>
                           </td>
                         <tr>
