--- a/reunion.html
+++ b/reunion.html
@@ -151,17 +151,15 @@ Aaron Wissmiller to Elaine Carter, June 10, 2022
 <p>
 Births:<br>
 Walter Paul Kenzie, Dec. 6, 2021<br>
-Ella Josephine, Dec. 18, 2021 (If you know her last name, please let me know, 
-<span style="unicode-bidi:bidi-override; direction: rtl;">ten.rellimssiw@retsambew</span>
-)
+Ella Josephine, Dec. 18, 2021 (If you know her last name, please <a href="contact.html">let me know</a>
 </p>
 <p>
-Deaths:
-Barbara Foulk, Nov. 13, 2021
-Janet Barret, Dec 6, 2021
-Dick Wangrow, Dec. 31, 2021
-John Wissmiller, Jan. 13, 2022
-Roger Wissmiller, Feb. 16, 2022
+Deaths:<br>
+Barbara Foulk, Nov. 13, 2021<br>
+Janet Barret, Dec 6, 2021<br>
+Dick Wangrow, Dec. 31, 2021<br>
+John Wissmiller, Jan. 13, 2022<br>
+Roger Wissmiller, Feb. 16, 2022<br>
 </p>
 <p>
 Old Business:
@@ -177,19 +175,13 @@ We also agreed on this point. If you know anyone interested in the reunion but w
 please <a href="contact.html">let me know</a>.
 </p>
 <p>
-Paul gave the Treasurer’s Report:
-Balance forward
-$65.00
-Stamps
--$16.00
-Postcards
--$14.00
-Donations collected
-$185.00
-Donated to church
--$100.00
-Final balance
-$120.00
+Paul gave the Treasurer’s Report:<br>
+Balance forward: $65.00
+Stamps: -$16.00
+Postcards: -$14.00
+Donations collected: $185.00
+Donated to church: -$100.00
+Final balance $120.00
 </p>
 <p>
 We voted and elected officers for next year:
@@ -268,7 +260,7 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
                               Powered by GitHub Pages
                             </a>
                             <p>
-This page modified: Thu Nov 10 16:57:28 2022
+This page modified: Fri Nov 11 10:39:15 2022
                             </p>
                           </td>
                         <tr>
