--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
         please <a href="contact.html">send me an email</a>.
 		    </p>
         <p>
-        As always, this website is a work in progress.
+        This website is forever a work in progress.
 		    </p>
 	    </td>
 	  </tr>
@@ -187,7 +187,7 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
                               Powered by GitHub Pages
                             </a>
                             <p>
-This page modified: Wed Nov  9 11:31:00 2022
+This page modified: Fri Nov 11 18:39:11 2022
                             </p>
                           </td>
                         <tr>
