--- a/pictures.html
+++ b/pictures.html
@@ -126,7 +126,7 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
         </p>
         <p>
         <a href="https://app.box.com/s/svy7nnkxsuvcyynmguryqy0u41p0n4r8" target="_blank">
-          Pictures here on Box!</a>
+          <h3>Pictures here on Box!</a></h3>
         </p>
       </td>
     </tr>
@@ -169,7 +169,7 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
                               Powered by GitHub Pages
                             </a>
                             <p>
-This page modified: Thu Nov 10 16:38:12 2022
+This page modified: Fri Nov 11 18:45:11 2022
                             </p>
                           </td>
                         <tr>
