--- a/reunion.html
+++ b/reunion.html
@@ -151,7 +151,7 @@ Aaron Wissmiller to Elaine Carter, June 10, 2022
 <p>
 Births:<br>
 Walter Paul Kenzie, Dec. 6, 2021<br>
-Ella Josephine, Dec. 18, 2021 (If you know her last name, please <a href="contact.html">let me know</a>
+Ella Josephine, Dec. 18, 2021 (If you know her last name, please <a href="contact.html">let me know</a>)
 </p>
 <p>
 Deaths:<br>
@@ -176,11 +176,11 @@ please <a href="contact.html">let me know</a>.
 </p>
 <p>
 Paul gave the Treasurer’s Report:<br>
-Balance forward: $65.00
-Stamps: -$16.00
-Postcards: -$14.00
-Donations collected: $185.00
-Donated to church: -$100.00
+Balance forward: $65.00<br>
+Stamps: -$16.00<br>
+Postcards: -$14.00<br>
+Donations collected: $185.00<br>
+Donated to church: -$100.00<br>
 Final balance $120.00
 </p>
 <p>
@@ -260,7 +260,7 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
                               Powered by GitHub Pages
                             </a>
                             <p>
-This page modified: Fri Nov 11 10:39:15 2022
+This page modified: Fri Nov 11 18:00:28 2022
                             </p>
                           </td>
                         <tr>
