small change to directory structure

--- a/contact.html
+++ b/contact.html
@@ -22,11 +22,8 @@
       <tbody>
         <tr>
           <td align="left">
-<!--            <img style="align: right; margin: 10px 10px" alt="sketch of me" src="images/sketchofme.jpg">-->
-            <a href="https://www.google.com/maps/place/Mikado,+MI+48745/@44.4311643,-83.39071,8z/data=!4m2!3m1!1s0x88274661777df855:0xdba9a5f6dc17aea">
             <img style="align: right; margin: 10px 10px" alt="Wissmiller Road, Mikado, MI" src="images/wissmiller-road.jpg">
-            <br>&nbsp;&nbsp;(click for map)
-          </a>
+            <a href="https://goo.gl/maps/XNTh8XcQrDUgcPoU9"><br>Yes, Wissmiller Road is real!<br>Click here for a map.</a>
           </td>
           <td>
             <table width="100%">
