--- a/reunion.html
+++ b/reunion.html
@@ -22,11 +22,8 @@
       <tbody>
         <tr>
           <td align="left">
-<!--            <img style="align: right; margin: 10px 10px" alt="sketch of me" src="images/sketchofme.jpg">-->
-            <a href="https://www.google.com/maps/place/Mikado,+MI+48745/@44.4311643,-83.39071,8z/data=!4m2!3m1!1s0x88274661777df855:0xdba9a5f6dc17aea">
             <img style="align: right; margin: 10px 10px" alt="Wissmiller Road, Mikado, MI" src="images/wissmiller-road.jpg">
-            <br>&nbsp;&nbsp;(click for map)
-          </a>
+            <a href="https://goo.gl/maps/XNTh8XcQrDUgcPoU9"><br>Yes, Wissmiller Road is real!<br>Click here for a map.</a>
           </td>
           <td>
             <table width="100%">
@@ -194,8 +191,7 @@ We voted and elected officers for next year:
 </p>
 <p>
 We agreed on the time and place for next year’s reunion (Our 100th Annual Reunion!)
-First Presbyterian Church. in Gibson City
-June 25, 2023, 12:30 PM
+June 25, 2023, 12:30 PM, at the First Presbyterian Church in Gibson City
 </p>
 <p>
 The meeting was adjourned.
@@ -260,7 +256,7 @@ vim: tabstop=2:softtabstop=2:shiftwidth=2:expandtab
                               Powered by GitHub Pages
                             </a>
                             <p>
-This page modified: Fri Nov 11 18:00:28 2022
+This page modified: Sat Nov 12 06:06:15 2022
                             </p>
                           </td>
                         <tr>
